// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Prose with defaults 1`] = `
.c0 {
  max-width: 66ch;
  line-height: 1.2;
}

.c0 h1 {
  margin: 2em 0 1em;
  line-height: 1.1;
  font-size: 1.5em;
}

.c0 h2 {
  margin: 1.5em 0 0.75em;
  font-size: 1.25em;
}

.c0 h3 {
  font-size: 1.17em;
}

.c0 h4 {
  font-size: 1em;
}

.c0 h5 {
  font-size: 0.9em;
}

.c0 h3,
.c0 h4,
.c0 h5,
.c0 p,
.c0 ol,
.c0 ul,
.c0 hr {
  margin-top: 1em;
  margin-bottom: 1em;
}

.c0 h1 + h2 {
  margin-top: -0.75em;
}

.c0 h1 + p,
.c0 h2 + p,
.c0 h1 + ol,
.c0 h2 + ol,
.c0 h1 + ul,
.c0 h2 + ul {
  margin-top: -0.75em;
}

.c0 h3 + p,
.c0 h4 + p,
.c0 h5 + p,
.c0 h3 + ol,
.c0 h4 + ol,
.c0 h5 + ol,
.c0 h3 + ul,
.c0 h4 + ul,
.c0 h5 + ul {
  margin-top: -1em;
}

.c0 > :not(.ignore-prose):first-child {
  margin-top: 0;
}

.c0 > :not(.ignore-prose):last-child {
  margin-bottom: 0;
}

.c0 dl {
  margin: 1em 0;
}

.c0 hr {
  border: 0;
  border-top: 0.1em solid #666666;
}

<div
  class="c0"
>
  <h1>
    Heading 1
  </h1>
  <h2>
    Heading 2
  </h2>
  <p>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor omnis quam modi magnam neque. Molestias recusandae, officia maiores nam pariatur earum qui inventore minus enim adipisci nemo voluptate at harum?
  </p>
  <h1>
    Heading 1
  </h1>
  <p>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor omnis quam modi magnam neque. Molestias recusandae, officia maiores nam pariatur earum qui inventore minus enim adipisci nemo voluptate at harum?
  </p>
  <h2>
    Heading 2
  </h2>
  <p>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor omnis quam modi magnam neque. Molestias recusandae, officia maiores nam pariatur earum qui inventore minus enim adipisci nemo voluptate at harum?
  </p>
  <p>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor omnis quam modi magnam neque. Molestias recusandae, officia maiores nam pariatur earum qui inventore minus enim adipisci nemo voluptate at harum?
  </p>
  <h3>
    Heading 3
  </h3>
  <p>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor omnis quam modi magnam neque. Molestias recusandae, officia maiores nam pariatur earum qui inventore minus enim adipisci nemo voluptate at harum?
  </p>
</div>
`;

exports[`renders Prose with right-aligned text 1`] = `
.c0 {
  max-width: 66ch;
  text-align: right;
  line-height: 1.2;
}

.c0 h1 {
  margin: 2em 0 1em;
  line-height: 1.1;
  font-size: 1.5em;
}

.c0 h2 {
  margin: 1.5em 0 0.75em;
  font-size: 1.25em;
}

.c0 h3 {
  font-size: 1.17em;
}

.c0 h4 {
  font-size: 1em;
}

.c0 h5 {
  font-size: 0.9em;
}

.c0 h3,
.c0 h4,
.c0 h5,
.c0 p,
.c0 ol,
.c0 ul,
.c0 hr {
  margin-top: 1em;
  margin-bottom: 1em;
}

.c0 h1 + h2 {
  margin-top: -0.75em;
}

.c0 h1 + p,
.c0 h2 + p,
.c0 h1 + ol,
.c0 h2 + ol,
.c0 h1 + ul,
.c0 h2 + ul {
  margin-top: -0.75em;
}

.c0 h3 + p,
.c0 h4 + p,
.c0 h5 + p,
.c0 h3 + ol,
.c0 h4 + ol,
.c0 h5 + ol,
.c0 h3 + ul,
.c0 h4 + ul,
.c0 h5 + ul {
  margin-top: -1em;
}

.c0 > :not(.ignore-prose):first-child {
  margin-top: 0;
}

.c0 > :not(.ignore-prose):last-child {
  margin-bottom: 0;
}

.c0 dl {
  margin: 1em 0;
}

.c0 hr {
  border: 0;
  border-top: 0.1em solid #666666;
}

<div
  class="c0"
>
  <h1>
    Heading 1
  </h1>
  <h2>
    Heading 2
  </h2>
  <p>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor omnis quam modi magnam neque. Molestias recusandae, officia maiores nam pariatur earum qui inventore minus enim adipisci nemo voluptate at harum?
  </p>
  <h1>
    Heading 1
  </h1>
  <p>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor omnis quam modi magnam neque. Molestias recusandae, officia maiores nam pariatur earum qui inventore minus enim adipisci nemo voluptate at harum?
  </p>
  <h2>
    Heading 2
  </h2>
  <p>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor omnis quam modi magnam neque. Molestias recusandae, officia maiores nam pariatur earum qui inventore minus enim adipisci nemo voluptate at harum?
  </p>
  <p>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor omnis quam modi magnam neque. Molestias recusandae, officia maiores nam pariatur earum qui inventore minus enim adipisci nemo voluptate at harum?
  </p>
  <h3>
    Heading 3
  </h3>
  <p>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor omnis quam modi magnam neque. Molestias recusandae, officia maiores nam pariatur earum qui inventore minus enim adipisci nemo voluptate at harum?
  </p>
</div>
`;

exports[`renders Prose with theme 1`] = `
.c0 {
  max-width: 66ch;
  line-height: 1.2;
  color: #666666;
  font-size: 10px;
}

.c0 h1 {
  margin: 2em 0 1em;
  line-height: 1.1;
  font-size: 1.5em;
}

.c0 h2 {
  margin: 1.5em 0 0.75em;
  font-size: 1.25em;
}

.c0 h3 {
  font-size: 1.17em;
}

.c0 h4 {
  font-size: 1em;
}

.c0 h5 {
  font-size: 0.9em;
}

.c0 h3,
.c0 h4,
.c0 h5,
.c0 p,
.c0 ol,
.c0 ul,
.c0 hr {
  margin-top: 1em;
  margin-bottom: 1em;
}

.c0 h1 + h2 {
  margin-top: -0.75em;
}

.c0 h1 + p,
.c0 h2 + p,
.c0 h1 + ol,
.c0 h2 + ol,
.c0 h1 + ul,
.c0 h2 + ul {
  margin-top: -0.75em;
}

.c0 h3 + p,
.c0 h4 + p,
.c0 h5 + p,
.c0 h3 + ol,
.c0 h4 + ol,
.c0 h5 + ol,
.c0 h3 + ul,
.c0 h4 + ul,
.c0 h5 + ul {
  margin-top: -1em;
}

.c0 > :not(.ignore-prose):first-child {
  margin-top: 0;
}

.c0 > :not(.ignore-prose):last-child {
  margin-bottom: 0;
}

.c0 dl {
  margin: 1em 0;
}

.c0 hr {
  border: 0;
  border-top: 0.1em solid #666666;
}

<div
  class="c0"
>
  <h1>
    Heading 1
  </h1>
  <h2>
    Heading 2
  </h2>
  <p>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor omnis quam modi magnam neque. Molestias recusandae, officia maiores nam pariatur earum qui inventore minus enim adipisci nemo voluptate at harum?
  </p>
  <h1>
    Heading 1
  </h1>
  <p>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor omnis quam modi magnam neque. Molestias recusandae, officia maiores nam pariatur earum qui inventore minus enim adipisci nemo voluptate at harum?
  </p>
  <h2>
    Heading 2
  </h2>
  <p>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor omnis quam modi magnam neque. Molestias recusandae, officia maiores nam pariatur earum qui inventore minus enim adipisci nemo voluptate at harum?
  </p>
  <p>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor omnis quam modi magnam neque. Molestias recusandae, officia maiores nam pariatur earum qui inventore minus enim adipisci nemo voluptate at harum?
  </p>
  <h3>
    Heading 3
  </h3>
  <p>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor omnis quam modi magnam neque. Molestias recusandae, officia maiores nam pariatur earum qui inventore minus enim adipisci nemo voluptate at harum?
  </p>
</div>
`;

exports[`renders Prose with with non-default options 1`] = `
.c0 {
  margin: 0 auto;
  text-align: center;
  line-height: 1.2;
}

.c0 h1 {
  margin: 2em 0 1em;
  line-height: 1.1;
  font-size: 1.5em;
}

.c0 h2 {
  margin: 1.5em 0 0.75em;
  font-size: 1.25em;
}

.c0 h3 {
  font-size: 1.17em;
}

.c0 h4 {
  font-size: 1em;
}

.c0 h5 {
  font-size: 0.9em;
}

.c0 h3,
.c0 h4,
.c0 h5,
.c0 p,
.c0 ol,
.c0 ul,
.c0 hr {
  margin-top: 0;
  margin-bottom: 0;
}

.c0 h1 + h2 {
  margin-top: -0.75em;
}

.c0 h1 + p,
.c0 h2 + p,
.c0 h1 + ol,
.c0 h2 + ol,
.c0 h1 + ul,
.c0 h2 + ul {
  margin-top: -0.75em;
}

.c0 h3 + p,
.c0 h4 + p,
.c0 h5 + p,
.c0 h3 + ol,
.c0 h4 + ol,
.c0 h5 + ol,
.c0 h3 + ul,
.c0 h4 + ul,
.c0 h5 + ul {
  margin-top: 0;
}

.c0 > :not(.ignore-prose):first-child {
  margin-top: 0;
}

.c0 > :not(.ignore-prose):last-child {
  margin-bottom: 0;
}

.c0 dl {
  margin: 1em 0;
}

.c0 hr {
  border: 0;
  border-top: 0.1em solid #666666;
}

<div
  class="c0"
>
  <h1>
    Heading 1
  </h1>
  <h2>
    Heading 2
  </h2>
  <p>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor omnis quam modi magnam neque. Molestias recusandae, officia maiores nam pariatur earum qui inventore minus enim adipisci nemo voluptate at harum?
  </p>
  <h1>
    Heading 1
  </h1>
  <p>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor omnis quam modi magnam neque. Molestias recusandae, officia maiores nam pariatur earum qui inventore minus enim adipisci nemo voluptate at harum?
  </p>
  <h2>
    Heading 2
  </h2>
  <p>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor omnis quam modi magnam neque. Molestias recusandae, officia maiores nam pariatur earum qui inventore minus enim adipisci nemo voluptate at harum?
  </p>
  <p>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor omnis quam modi magnam neque. Molestias recusandae, officia maiores nam pariatur earum qui inventore minus enim adipisci nemo voluptate at harum?
  </p>
  <h3>
    Heading 3
  </h3>
  <p>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor omnis quam modi magnam neque. Molestias recusandae, officia maiores nam pariatur earum qui inventore minus enim adipisci nemo voluptate at harum?
  </p>
</div>
`;
